@@ -1,0 +1,209 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        :root {
+            --background-color: #282c34;
+            --background-color-alt: #2d313a;
+            --background-color-hover: #1e2127;
+            --text-link: #3498db;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: var(--background-color);
+            color: white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin: 0;
+        }
+
+        #gradientBox {
+            width: 300px;
+            padding: 20px;
+            background-color: var(--background-color-alt);
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: white;
+        }
+
+        select,
+        input[type="color"],
+        input[type="range"] {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 10px;
+            box-sizing: border-box;
+            border: 1px solid #444;
+            border-radius: 4px;
+            background-color: var(--background-color-alt);
+            color: white;
+        }
+
+        input[type="color"] {
+            appearance: none;
+            border: none;
+            padding: 0;
+            cursor: pointer;
+        }
+
+        input[type="range"] {
+            width: calc(100% - 16px);
+            margin-right: 16px;
+        }
+
+        button {
+            padding: 10px;
+            cursor: pointer;
+            border: none;
+            border-radius: 4px;
+            background-color: var(--text-link);
+            color: white;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: var(--background-color-hover);
+        }
+
+        .colorStop {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+
+        .removeStopBtn {
+            margin-left: 10px;
+            background-color: #e74c3c;
+        }
+
+        #gradientResult {
+            width: 100%;
+            height: 150px;
+            margin-bottom: 20px;
+            border-radius: 8px;
+        }
+
+        #cssOutput {
+            background-color: var(--background-color-alt);
+            padding: 10px;
+            border-radius: 8px;
+            white-space: pre-wrap;
+        }
+    </style>
+    <title>Gradient Generator</title>
+</head>
+<body>
+    <div id="gradientBox">
+        <label for="gradientType">Gradient Type:</label>
+        <select id="gradientType">
+            <option value="linear">Linear</option>
+            <option value="radial">Radial</option>
+            <option value="conic">Conic</option>
+        </select>
+
+        <div>
+            <label for="colorStops">Color Stops:</label>
+            <div id="colorStops">
+                <div class="colorStop">
+                    <input type="color" value="#3498db">
+                    <input type="range" min="0" max="100" value="0">
+                    <button class="removeStopBtn">Remove</button>
+                </div>
+            </div>
+            <button id="addStopBtn">Add Color Stop</button>
+        </div>
+
+        <div>
+            <label for="gradientResult">Gradient Result:</label>
+            <div id="gradientResult"></div>
+        </div>
+
+        <div>
+            <label for="cssOutput">CSS Output:</label>
+            <div id="cssOutput"></div>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            const gradientTypeSelect = document.getElementById('gradientType');
+            const colorStopsContainer = document.getElementById('colorStops');
+            const gradientResult = document.getElementById('gradientResult');
+            const cssOutput = document.getElementById('cssOutput');
+            const addStopBtn = document.getElementById('addStopBtn');
+
+            addStopBtn.addEventListener('click', addColorStop);
+
+            function addColorStop() {
+                const colorStopDiv = document.createElement('div');
+                colorStopDiv.classList.add('colorStop');
+
+                const colorInput = document.createElement('input');
+                colorInput.type = 'color';
+                colorInput.value = getRandomColor();
+
+                const rangeInput = document.createElement('input');
+                rangeInput.type = 'range';
+                rangeInput.min = '0';
+                rangeInput.max = '100';
+                rangeInput.value = '0';
+
+                const removeStopBtn = document.createElement('button');
+                removeStopBtn.classList.add('removeStopBtn');
+                removeStopBtn.textContent = 'Remove';
+                removeStopBtn.addEventListener('click', () => {
+                    colorStopsContainer.removeChild(colorStopDiv);
+                    updateGradient();
+                });
+
+                colorStopDiv.appendChild(colorInput);
+                colorStopDiv.appendChild(rangeInput);
+                colorStopDiv.appendChild(removeStopBtn);
+
+                colorStopsContainer.appendChild(colorStopDiv);
+
+                updateGradient();
+            }
+
+            function updateGradient() {
+                const gradientType = gradientTypeSelect.value;
+                const colorStops = Array.from(colorStopsContainer.children).map(colorStop => {
+                    const color = colorStop.querySelector('input[type=color]').value;
+                    const position = colorStop.querySelector('input[type=range]').value;
+                    return `${color} ${position}%`;
+                }).join(', ');
+
+                const gradientValue = `${gradientType}-gradient(${colorStops})`;
+                gradientResult.style.background = gradientValue;
+
+                const cssCode = `background: ${gradientValue};`;
+                cssOutput.textContent = cssCode;
+            }
+
+            gradientTypeSelect.addEventListener('change', updateGradient);
+            colorStopsContainer.addEventListener('input', updateGradient);
+
+            // Initial update
+            updateGradient();
+
+            function getRandomColor() {
+                const letters = '0123456789ABCDEF';
+                let color = '#';
+                for (let i = 0; i < 6; i++) {
+                    color += letters[Math.floor(Math.random() * 16)];
+                }
+                return color;
+            }
+        });
+    </script>
+</body>
+</html>
