@@ -89,7 +89,7 @@
                 <span onclick="functions.toggleSimpleOption(event, 'jsModules')" data-value=false data-name="jsModules">Use Modules for JS</span>
                 <span class="subMenu" title="COMING SOON" aria-disabled="true">CSS Generators
                     <div class="dropdown">
-                        <span>There's Nothing Here right now..</span>
+                        <span onclick="window.open('/assets/generators/gradients.html')">Gradients</span>
                     </div>
                 </span>
             </div>
@@ -119,6 +119,7 @@
         </button>
         <button>Help
             <div class="dropdown">
+                <span onclick="functions.displayHelp('console')">Working with the Console</span>
                 <span onclick="functions.displayHelp('jsModules')">Javascript Modules</span>
             </div>
         </button>
