@@ -2,7 +2,7 @@
 import { functions } from "/assets/js/functions.mjs"
 import { monacoColors, monacoRules } from "./assets/js/colors.mjs";
 window.functions = functions
-const version = "1.7.5"
+export const version = "1.8.5"
 
 export var itemHistory = [];
 export var item = 0
@@ -37,7 +37,8 @@ export var injectScript = `
    <!-- Injected by Ash-code | Forward Facing Console -->`
 fetch("assets/js/console.js").then(r => r.text()).then(data => {
     injectScript += `<script id="ashcodeInjectedScript">
-    ${data}<\/script>`
+    ${data}
+    <\/script>`
 })
 
 
