@@ -1,3 +1,7 @@
+== 11/27/23 ==
+ - Added help for console
+ - Added CSS Gradient Generator
+
 == 11/25/23 ==
  - Added option to popup editor preview
    - Can be laggy on some devices when auto update is enabled.
